added merging for second level split and 1gs/0es